--- a/MyCity4Kids/MyCity4Kids/res/layout/custom_comment_cell.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/custom_comment_cell.xml
@@ -26,7 +26,9 @@
             android:contentDescription="@string/author_img"
             android:src="@drawable/default_commentor_img"
             android:visibility="visible"
-            app:civ_border="false"
+            app:civ_border="true"
+            app:civ_border_color="@color/white_color"
+            app:civ_border_width="0dp"
             app:civ_shadow="true"
             app:civ_shadow_color="@color/grey"
             app:civ_shadow_radius="4" />
@@ -103,7 +105,9 @@
             android:layout_marginRight="5dp"
             android:layout_marginTop="5dp"
             android:src="@drawable/default_commentor_img"
-            app:civ_border="false"
+            app:civ_border="true"
+            app:civ_border_color="@color/white_color"
+            app:civ_border_width="0dp"
             app:civ_shadow="true"
             app:civ_shadow_color="@color/grey"
             app:civ_shadow_radius="4" />
