--- a/MyCity4Kids/MyCity4Kids/res/layout/activity_blogger_dashboard.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/activity_blogger_dashboard.xml
@@ -44,8 +44,10 @@
         android:layout_toRightOf="@+id/bloggerImageView"
         android:drawableLeft="@drawable/ic_trending"
         android:drawablePadding="2dp"
+        android:hint="blogger rank"
         android:text="0"
-        android:textColor="@color/dashboard.stats" />
+        android:textColor="@color/dashboard.stats"
+        android:visibility="invisible" />
 
     <View
         android:id="@+id/vSeparator1"
@@ -56,7 +58,8 @@
         android:layout_marginLeft="6dp"
         android:layout_marginRight="6dp"
         android:layout_toRightOf="@+id/rankingTextView"
-        android:background="@color/login_grey" />
+        android:background="@color/login_grey"
+        android:visibility="invisible" />
 
     <TextView
         android:id="@+id/viewCountTextView"
@@ -66,8 +69,10 @@
         android:layout_toRightOf="@+id/vSeparator1"
         android:drawableLeft="@drawable/ic_views"
         android:drawablePadding="2dp"
+        android:hint="article views"
         android:text="0"
-        android:textColor="@color/dashboard.stats" />
+        android:textColor="@color/dashboard.stats"
+        android:visibility="invisible" />
 
     <View
         android:id="@+id/vSeparator2"
@@ -78,7 +83,8 @@
         android:layout_marginLeft="6dp"
         android:layout_marginRight="6dp"
         android:layout_toRightOf="@+id/viewCountTextView"
-        android:background="@color/login_grey" />
+        android:background="@color/login_grey"
+        android:visibility="invisible" />
 
     <TextView
         android:id="@+id/followersViewCount"
@@ -88,8 +94,10 @@
         android:layout_toRightOf="@+id/vSeparator2"
         android:drawableLeft="@drawable/ic_followers"
         android:drawablePadding="2dp"
+        android:hint="followers"
         android:text="0"
-        android:textColor="@color/dashboard.stats" />
+        android:textColor="@color/dashboard.stats"
+        android:visibility="invisible" />
 
 
     <View
@@ -138,6 +146,7 @@
         android:layout_height="match_parent"
         android:layout_alignParentBottom="true"
         android:layout_below="@+id/separator2" />
+
     <ImageView
         android:id="@+id/addDraft"
         android:layout_width="wrap_content"
