--- a/MyCity4Kids/MyCity4Kids/res/layout/new_blog_common_header_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/new_blog_common_header_item.xml
@@ -19,6 +19,15 @@
         android:layout_height="240dp"
         android:background="#4D000000" />
 
+    <ImageView
+        android:id="@+id/shareBlogImageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"
+        android:visibility="gone"
+        android:src="@drawable/share" />
+
     <TextView
         android:id="@+id/blogger_name"
         android:layout_width="wrap_content"
