--- a/MyCity4Kids/MyCity4Kids/res/layout/filter_dialog_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/filter_dialog_activity.xml
@@ -107,14 +107,14 @@
             android:padding="15dp"
             android:text="CANCEL" />
 
-        <TextView
-            android:id="@+id/reset_filter"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:padding="15dp"
-            android:text="RESET"
-            android:textColor="@color/new_blue" />
+        <!--<TextView-->
+            <!--android:id="@+id/reset_filter"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_gravity="center_vertical"-->
+            <!--android:padding="15dp"-->
+            <!--android:text="RESET"-->
+            <!--android:textColor="@color/new_blue" />-->
 
     </LinearLayout>
 
