--- a/MyCity4Kids/MyCity4Kids/res/layout/fragment_author_listing.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/fragment_author_listing.xml
@@ -58,4 +58,12 @@
             android:src="@drawable/progress_spinner" />
     </RelativeLayout>
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:visibility="invisible" />
+
 </RelativeLayout>
