--- a/MyCity4Kids/MyCity4Kids/res/layout/new_article_details_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/new_article_details_activity.xml
@@ -63,7 +63,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:fontFamily="sans-serif-thin"
-                    android:text="11 Jun 2015"
+                    android:text=""
                     android:textColor="@color/white_color"
                     android:textSize="16sp" />
             </LinearLayout>
@@ -77,7 +77,7 @@
                 android:fontFamily="sans-serif-thin"
                 android:paddingBottom="10dp"
                 android:paddingLeft="10dp"
-                android:text="Saryu Dash"
+                android:text=""
                 android:textColor="@color/white_color"
                 android:textSize="18sp" />
 
@@ -128,9 +128,7 @@
                 android:padding="10dp"
                 android:text="FOLLOW"
                 android:textColor="@color/blog.comments.follow_reply_btn"
-                android:textSize="14sp"
-                app:layout_anchor="@id/appbar"
-                app:layout_anchorGravity="bottom|left|end" />
+                android:textSize="14sp"/>
 
             <WebView
                 android:id="@+id/articleWebView"
@@ -280,8 +278,8 @@
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/user_image"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_marginLeft="15dp"
         android:clickable="true"
         android:scaleType="fitXY"
