--- a/MyCity4Kids/MyCity4Kids/res/menu/aa_new_show_article.xml
+++ b/MyCity4Kids/MyCity4Kids/res/menu/aa_new_show_article.xml
@@ -4,7 +4,7 @@
 
     <item
         android:id="@+id/bookmark"
-        android:icon="@drawable/share"
+        android:icon="@drawable/ic_favorite_border_white_48dp"
         android:title="Bookmark"
         app:showAsAction="always" />
     <item
