--- a/MyCity4Kids/MyCity4Kids/res/layout/published_articles_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/published_articles_item.xml
@@ -42,7 +42,8 @@
                 android:singleLine="false"
                 android:text="@string/title"
                 android:textColor="@color/black_color"
-                android:textSize="15dp" />
+                android:textSize="15dp"
+                android:layout_marginRight="30dp"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
