Dashbaord UI with card layout

--- a/MyCity4Kids/MyCity4Kids/res/layout/aa_mc4k_home.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/aa_mc4k_home.xml
@@ -19,19 +19,19 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <android.support.v7.widget.CardView
+           <!-- <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
-                android:layout_marginTop="5dp">
+                android:layout_marginTop="5dp">-->
 
 
                 <LinearLayout
                     android:id="@+id/blogss"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@color/white_color"
+
                     android:orientation="vertical">
 
                     <LinearLayout
@@ -49,7 +49,7 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
-                            android:layout_weight=".2"
+                            android:layout_weight=".15"
                             android:src="@drawable/blog_listxxhdpi" />
 
                         <TextView
@@ -57,7 +57,7 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
-                            android:layout_weight=".8"
+                            android:layout_weight=".85"
                             android:paddingBottom="10dp"
                             android:paddingTop="10dp"
                             android:text="Trending Blogs"
@@ -87,12 +87,31 @@
                         android:visibility="gone" />
 
 
-                    <com.mycity4kids.widget.CustomListView
+                    <!--<com.mycity4kids.widget.CustomListView
                         android:id="@+id/bloglist"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:divider="@color/dividercolor"
-                        android:dividerHeight="0.3dp" />
+                        android:dividerHeight="0.3dp" />-->
+                    <HorizontalScrollView
+                        android:layout_width="match_parent"
+                        android:layout_height="240dp"
+                        android:divider="@color/dividercolor"
+                        android:dividerHeight="0.3dp"
+                        android:id="@+id/bloglist"
+                        android:layout_marginTop="5dp"
+                        android:scrollbars="none"
+                        >
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:id="@+id/hzScrollLinearLayout"
+                            android:orientation="horizontal"
+                            >
+
+                        </LinearLayout>
+
+                    </HorizontalScrollView>
 
                     <TextView
                         android:id="@+id/go_to_blog"
@@ -101,18 +120,117 @@
                         android:padding="15dp"
                         android:text="@string/home_goto_blog"
                         android:textColor="@color/home_light_blue"
+                        android:textStyle="bold"
+                        android:visibility="gone"/>
+
+                </LinearLayout>
+            <LinearLayout
+                android:id="@+id/editorPicks"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+
+                android:orientation="vertical">
+
+                <LinearLayout
+
+                    android:id="@+id/blogHeader1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/home_purple"
+                    android:orientation="horizontal"
+                    android:weightSum="1">
+
+
+                    <ImageView
+                        android:id="@+id/img_go_to_blogs1"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_weight=".15"
+                        android:src="@drawable/blog_listxxhdpi" />
+
+                    <TextView
+                        android:id="@+id/txtBlogs1"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_weight=".85"
+                        android:paddingBottom="10dp"
+                        android:paddingTop="10dp"
+                        android:text="Editor's Picks"
+                        android:textAppearance="?android:attr/textAppearanceMedium"
+                        android:textColor="@color/white_color"
                         android:textStyle="bold" />
+
 
                 </LinearLayout>
 
-            </android.support.v7.widget.CardView>
+
+                <ProgressBar
+                    android:id="@+id/blogprogressbar1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:visibility="gone" />
+
+                <TextView
+                    android:id="@+id/no_blog1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:padding="2dp"
+                    android:text="No Blogs Listed"
+                    android:textColor="@color/grey"
+                    android:textSize="12dp"
+                    android:visibility="gone" />
+
+
+                <!--<com.mycity4kids.widget.CustomListView
+                    android:id="@+id/bloglist"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:divider="@color/dividercolor"
+                    android:dividerHeight="0.3dp" />-->
+                <HorizontalScrollView
+                    android:layout_width="match_parent"
+                    android:layout_height="240dp"
+                    android:divider="@color/dividercolor"
+                    android:dividerHeight="0.3dp"
+                    android:id="@+id/bloglist1"
+                    android:layout_marginTop="5dp"
+                    android:scrollbars="none"
+                    >
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:id="@+id/hzScrollLinearLayout1"
+                        android:orientation="horizontal"
+                        >
+
+                    </LinearLayout>
+
+                </HorizontalScrollView>
+
+                <TextView
+                    android:id="@+id/go_to_blog1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="15dp"
+                    android:text="@string/home_goto_blog"
+                    android:textColor="@color/home_light_blue"
+                    android:textStyle="bold"
+                    android:visibility="gone"/>
+
+            </LinearLayout>
+
+       <!--     </android.support.v7.widget.CardView>-->
 
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
-                android:layout_marginTop="5dp">
+                android:layout_marginTop="5dp"
+                android:visibility="gone">
 
 
                 <LinearLayout
@@ -285,20 +403,21 @@
             <!--</LinearLayout>-->
             <!--</android.support.v7.widget.CardView>-->
 
-            <android.support.v7.widget.CardView
+           <!-- <android.support.v7.widget.CardView
                 android:id="@+id/eventsss"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
-                android:layout_marginTop="5dp">
+                android:layout_marginTop="5dp">-->
 
                 <LinearLayout
 
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@color/white_color"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:id="@+id/eventsss"
+                    >
 
 
                     <LinearLayout
@@ -316,7 +435,7 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
-                            android:layout_weight=".2"
+                            android:layout_weight=".15"
                             android:src="@drawable/zoom_list" />
 
                         <TextView
@@ -324,7 +443,7 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
-                            android:layout_weight=".8"
+                            android:layout_weight=".85"
                             android:paddingBottom="10dp"
                             android:paddingTop="10dp"
                             android:text="@string/home_events"
@@ -358,7 +477,25 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:divider="@color/dividercolor"
-                        android:dividerHeight="0.3dp" />
+                        android:dividerHeight="0.3dp"
+                        android:visibility="gone"/>
+                    <HorizontalScrollView
+                        android:layout_width="match_parent"
+                        android:layout_height="240dp"
+                        android:divider="@color/dividercolor"
+                        android:dividerHeight="0.3dp"
+                        android:layout_marginTop="5dp"
+                        android:scrollbars="none"
+                        >
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:id="@+id/hzScrollLinearLayoutEvent"
+                            android:orientation="horizontal">
+
+                        </LinearLayout>
+
+                    </HorizontalScrollView>
 
                     <TextView
                         android:id="@+id/go_to_events"
@@ -367,9 +504,10 @@
                         android:padding="15dp"
                         android:text="@string/home_goto_event"
                         android:textColor="@color/home_light_blue"
-                        android:textStyle="bold" />
+                        android:textStyle="bold"
+                        android:visibility="gone"/>
                 </LinearLayout>
-            </android.support.v7.widget.CardView>
+          <!--  </android.support.v7.widget.CardView>-->
 
         </LinearLayout>
 
